Integer to int datatypes